--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -15,7 +15,7 @@ sonar.sources=.
 sonar.sourceEncoding=UTF-8
 
 # mengecualikan file yang di scanning
-sonar.exclusions=coverage/**, node_module/**, testing/**
+sonar.exclusions=coverage/**, node_modules/**, testing/**
 
 # memasukan file hasil npm tes coverage
 sonar.javascript.lcov.reportpaths=coverage/lcov.info
