--- a/Apps/sonar-project.properties
+++ b/Apps/sonar-project.properties
@@ -15,7 +15,7 @@ sonar.sources=.
 sonar.sourceEncoding=UTF-8
 
 # mengecualikan file yang di scanning
-sonar.exclusions=coverage/**, node_modules/**, testing/**
+sonar.exclusions=Apps/coverage/**, Apps/node_modules/**, Apps/testing/**, Apps/Dockerfile
 
 # memasukan file hasil npm tes coverage
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
